--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation  'com.android.support:support-v4:29.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'com.android.support:support-v4:29.0.0'
+
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.material:material:1.0.0'
 }
